--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,14 +2,20 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>A static page</title>
-	<link rel="stylesheet" href="/stylesheets/main.css">
+	<title>{{.pageTitle}}</title>
 </head>
 <body>
-	<h1>washere</h1>
+	<h1>{{.pageTitle}}</h1>
 	<form>
 		<input type="text" name="signature">
 		<input type="submit">
 	</form>
+	<ul>
+		{{range .signatures}}
+			<li>
+				<div>{{.signature}}</div>
+				<div>{{.createdAt}}</div>
+			</li>
+	</ul>
 </body>
 </html>
