--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,21 +1,23 @@
 <!doctype html>
+<link rel="icon" href="data:,">
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>{{.pageTitle}}</title>
+	<title>{{.PageTitle}}</title>
 </head>
 <body>
-	<h1>{{.pageTitle}}</h1>
-	<form>
+	<h1>{{.PageTitle}}</h1>
+	<form method="POST">
 		<input type="text" name="signature">
 		<input type="submit">
 	</form>
 	<ul>
-		{{range .signatures}}
+		{{range .Signatures}}
 			<li>
-				<div>{{.signature}}</div>
-				<div>{{.createdAt}}</div>
+				<div>{{.Text}}</div>
+				<div>{{.CreatedAt}}</div>
 			</li>
+		{{end}}
 	</ul>
 </body>
 </html>
