--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,9 @@
 	<title>{{.PageTitle}}</title>
 </head>
 <body>
+	<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
 	<h1>{{.PageTitle}}</h1>
-	<form method="POST">
+	<form method="POST" action="http://localhost:8081/" target="dummyframe">
 		<input type="text" name="signature">
 		<input type="submit">
 	</form>
