--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,16 +8,13 @@
 <body>
 	<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
 	<h1>{{.PageTitle}}</h1>
-	<form method="POST" action="http://localhost:8081/" target="dummyframe">
+	<form method="POST" action="http://192.168.0.251:8081/" target="dummyframe">
 		<input type="text" name="signature">
 		<input type="submit">
 	</form>
 	<ul>
-		{{range .Signatures}}
-			<li>
-				<div>{{.Text}}</div>
-				<div>{{.CreatedAt}}</div>
-			</li>
+		{{range .SignaturesResponses}}
+			<li>{{.SignatureResponse}}</li>
 		{{end}}
 	</ul>
 </body>
