signature server and client grpc

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,8 @@
 		<input type="submit">
 	</form>
 	<ul>
-		{{range .SignaturesResponses}}
-			<li>{{.SignatureResponse}}</li>
+		{{range .Signatures}}
+			<li>{{.}}</li>
 		{{end}}
 	</ul>
 </body>
