--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -3,19 +3,17 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>{{.PageTitle}}</title>
+	<title>washere</title>
+	<script src="getSignatures.js"></script>
 </head>
 <body>
 	<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
-	<h1>{{.PageTitle}}</h1>
+	<h1>washere</h1>
 	<form method="POST" action="192.168.0.252:32005/" target="dummyframe">
 		<input type="text" name="signature">
 		<input type="submit">
 	</form>
-	<ul>
-		{{range .Signatures}}
-			<li>{{.}}</li>
-		{{end}}
-	</ul>
+	<ul id="signatures"></ul>
+	<input id="get-signatures-button" type="button" value="Load More" onclick="getSignatures()">
 </body>
 </html>
