--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -9,7 +9,7 @@
 <body>
 	<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
 	<h1>washere</h1>
-	<form method="POST" action="192.168.0.252:32005/" target="dummyframe">
+	<form method="POST" action="http://192.168.0.252:32224/signatures" target="dummyframe">
 		<input type="text" name="signature">
 		<input type="submit">
 	</form>
