ingress instead of nodeports

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -9,11 +9,11 @@
 <body>
 	<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
 	<h1>washere</h1>
-	<form method="POST" action="http://192.168.0.252:32224/signatures" target="dummyframe">
+	<form method="POST" action="http://washere.com:32080/signatures/create" target="dummyframe">
 		<input type="text" name="signature">
 		<input type="submit">
 	</form>
-	<ul id="signatures"></ul>
 	<input id="get-signatures-button" type="button" value="Load More" onclick="getSignatures()">
+	<ul id="signatures"></ul>
 </body>
 </html>
